add rpc ChangeThreadCount
